# cpuminer-sugar

./: Makefile.am  algo-gate-api.c  configure  cpu-miner.c  miner.h
algo/sha/: sha2.c
